# matrix

./: CMakeLists.txt
include/: constant.h  matrix.h  matrix.hpp
src/: matrix.cpp
unittest/: CMakeLists.txt  cross_product.cpp  dot_product.cpp
